Fixed some game maps that had improper sizes. Errors which was not visible without the new game table.

--- a/application/game_modules/fire_in_the_lake/style.css
+++ b/application/game_modules/fire_in_the_lake/style.css
@@ -12,15 +12,15 @@
 }
 #game_board {
     background-image: url('components/vassal/FITL Map VASSAL.jpg');
-    width: 2410px;
-    height: 3695px;
+    width: 3277px;
+    height: 5065px;
 }
 
 .fitl_marker {
     /* Custom for this game */
     background-repeat: no-repeat;
-    width: 50px;
-    height: 50px;
+    width: 110px;
+    height: 110px;
 
     background-size: contain;
     border: 0;
