--- a/application/game_modules/squad_leader/style.css
+++ b/application/game_modules/squad_leader/style.css
@@ -12,8 +12,8 @@
 
 #map1_west {
     background-image: url('components/maps/map1_west.jpg');
-    height: 800px;
-    width: 1200px;
+    width: 1304px;
+    height: 960px;
 }
 
 .sl_counter_small {
